changed POM versions to not conflict with base project. Using a suffix of -gabe to differentiate. Also bumped the version number to 1.1.1 for consistency between the modules.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.coremedia.drm</groupId>
     <artifactId>all</artifactId>
     <packaging>pom</packaging>
-    <version>2-SNAPSHOT</version>
+    <version>1.1.1-prismod-SNAPSHOT</version>
     <name>IsoBox4j - All</name>
     <url>https://contributions.coremedia.com/isobox4j</url>
     <licenses>
