--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>all</artifactId>
         <groupId>com.coremedia.drm</groupId>
-        <version>2-SNAPSHOT</version>
+        <version>1.1.1-prismod-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.googlecode.mp4parser</groupId>
             <artifactId>isoparser</artifactId>
-            <version>1.0-alpha-2-SNAPSHOT</version>
+            <version>1.1.1-prismod-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
