--- a/isoviewer/pom.xml
+++ b/isoviewer/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>isoviewer</artifactId>
   <packaging>jar</packaging>
   <name>ISO Viewer</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1.1-prismod-SNAPSHOT</version>
   <description>The ISO Viewer is a UI Tool for viewing ISO Box files (see ISO/IEC 14496-12). Useful for looking into
     Apple Quicktime Movies, DCF files, PDCF files, MP4 files and other ISO Box files.
   </description>
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>com.googlecode.mp4parser</groupId>
       <artifactId>isoparser</artifactId>
-      <version>1.0-alpha-2-SNAPSHOT</version>
+      <version>1.1.1-prismod-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
